testcrate/ui/unresolved-type.stderr
error[E0412]: cannot find type `Left` in this scope
 --> $DIR/unresolved-type.rs:8:30
  |
8 | fn foo() -> impl Future<Item=Left, Error=u32> {
  |                              ^^^^ not found in this scope
  |
  = help: there is an enum variant `futures::future::Either::Left`, try using `futures::future::Either`?
  = help: there is an enum variant `std::fmt::rt::v1::Alignment::Left`, try using `std::fmt::rt::v1::Alignment`?

error[E0412]: cannot find type `Left` in this scope
  --> $DIR/unresolved-type.rs:13:31
   |
13 | fn foos() -> impl Stream<Item=Left, Error=u32> {
   |                               ^^^^ not found in this scope
   |
   = help: there is an enum variant `futures::future::Either::Left`, try using `futures::future::Either`?
   = help: there is an enum variant `std::fmt::rt::v1::Alignment::Left`, try using `std::fmt::rt::v1::Alignment`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
